--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <p>Browse through the most frequently asked questions</p>
     </div>
     <div class="track">
-        <h3>How can I track my order?</h3>
+        <h2>How can I track my order?</h2>
         <p>You can track your order using the following steps</p>
         <p>
             <ol>
-                <li>Go to the Order <a src="example.com">Tracking page</a>.</li>
+                <li>Go to the Order <a href="example.com">Tracking page</a>.</li>
                 <li>Enter your order number and email address.</li>
                 <li>Click on the Track Order button to view the current status of your shipment.</li>
             </ol>
         </p>
-        <p>If you encounter any issues, please visit our <a src="example.com">Help Center</a>.</p>
+        <p>If you encounter any issues, please visit our <a href="example.com">Help Center</a>.</p>
     </div>
     <hr>
     <div class="return">
-        <h3>What is your return policy?</h3>
+        <h2>What is your return policy?</h2>
         <p>We offer a 30-day return policy on most items. Here are some key points</p>
         <p>
             <ul>
@@ -34,7 +34,7 @@
                 <li><b>Proof of purchase:</b> A receipt or proof of purchase is required.</li>
             </ul>
         </p>
-        <p>For more detailed information, read our full <a>Return Policy</a>.</p>
+        <p>For more detailed information, read our full <a href="example.com">Return Policy</a>.</p>
     
     </div>
 </body>
